fix navbar shrink on safari and safari mobile

--- a/client/src/components/style.css
+++ b/client/src/components/style.css
@@ -47,6 +47,10 @@ body {
     0 20px 20px rgba(0, 0, 0, 0.15);
 }
 
+.gm_nav {
+  flex-shrink: 0;
+}
+
 .navbar-brand-override {
   line-height: 0 !important;
 }
